# mini-manus

./: README.md  main.py  pyproject.toml
api/: .env-template  .gitignore  README.md  alembic.ini  dev.sh  docker-compose.yml  pyproject.toml  pytest.ini
api/app/: main.py
api/app/application/errors/: exceptions.py
api/app/application/services/: app_config_service.py  status_service.py
api/app/domain/models/: app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  tool_result.py
api/app/domain/repositories/: app_config_repository.py
api/app/domain/services/agents/: base.py  planner.py  react.py
api/app/domain/services/prompts/: planner.py  react.py  system.py
api/app/domain/services/tools/: base.py  search.py
api/app/infrastructure/logging/: logging.py
api/app/infrastructure/models/: base.py
api/app/infrastructure/repositories/: file_app_config_repository.py
api/app/infrastructure/storage/: oss.py  posgres.py  redis.py
api/app/interfaces/: dependencies.py  service_dependencies.py
api/app/interfaces/endpoints/: app_config_routes.py  routes.py  status_routes.py
api/app/interfaces/errors/: exception_handlers.py
api/app/interfaces/schemas/: base.py
api/core/: config.py
api/study/: gaode_mcp_with_sdk.py  gaode_mcp_without_sdk.py  mcp_bash.py  mcp_client.py  mcp_code.py  mcp_server.py
api/tests/: conftest.py
api/tests/app/interfaces/endpoints/: test_status_routes.py
