[project]
name = "mini-manus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "greenlet>=3.3.1",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.38.0",
]
