[project]
name = "mini-manus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.3",
    "alibabacloud-oss-v2>=1.2.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "fastmcp>=2.14.5",
    "filelock>=3.20.3",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "json-repair>=0.58.0",
    "openai>=2.8.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.38.0",
]
